# django_chugunapp

generation/: .dockerignore  .env  .my_pgpass  .pg_service.conf  Dockerfile  db.sqlite3  docker-compose.yaml  init_db_data.json  manage.py  pyproject.toml  redis.env
generation/generation/: asgi.py  settings.py  urls.py  wsgi.py
generation/static/css/: style.css
generation/static/js/: csv_reader_filter.js  csv_reader_filter_ORIG.js  csv_reader_home.js  modal_win.js
generation/templates/: base.html
generation/templates/text_gen/: about_me.html  csv_reader_filter.html  csv_reader_home.html  home.html
generation/templates/users/: login.html  profile.html  register.html
generation/text_gen/: admin.py  forms.py  mixins.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
generation/text_gen/GPT/: generation.py
generation/text_gen/MarianMTModel/: translator.py
generation/text_gen/lstm_nn/: models.py  predict.py  preprocessing_data.py  train.py
generation/text_gen/migrations/: 0001_initial.py
generation/text_gen/templatetags/: index.py
generation/users/: forms.py  mixins.py  models.py  signals.py  urls.py  views.py
generation/users/tmpls/users_prev/: base.html  login.html  logout.html  profile.html  register.html
